PAYARA-3536 Remove endorsed classpath